[project]
name = "flux-api"
version = "0.1.0"
description = "Providing an api for accessing self-hosting Flux model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.6.0",
    "bitsandbytes>=0.45.4",
    "diffusers>=0.32.2",
    "fastapi>=0.115.12",
    "protobuf>=6.30.2",
    "pydantic>=2.11.1",
    "scalar-fastapi>=1.0.3",
    "sentencepiece>=0.2.0",
    "transformers>=4.50.3",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.6",
    "ruff>=0.11.2",
]

[tool.ruff]
line-length = 130

[tool.ruff.lint]
select = [
    "I", # isort
    "E", # pycodestyle error
    "W", # pycodestyle warning
    "F", # Pyflakes
    "B", # flake8-bugbear
]
